
Calligra Plan current:

* Improve view selector:
  Enable moving views and categories using drag and drop
  Fix various problems with the view selector dialogs

* Disable dbus adapter

* Fix scheduling of resources that works during daylight saving time changes

* Set datetime grid hour format in accordance with kde settings
  (Ref bug 284361)

* Fix bug 284349 Gantt chart: remember zoom and scale settings

* Task editor: Do allow editing of irrelevant data for summary tasks and milestones

* Reports: Use localized number formatting

* Schedule log:
  Allow opening task- and resource dialog
  Color log entries in accordance with severity

* Report chart item: Add posibility to limit amount of data to display

* Add drag&drop resources from akonadi address book

* View selector: Add 'Execution' category

* Improve scripting
  Add create capability to make it possible to write importer.
  Use undo commands so it is possible to keep ui consistent.
  Cleaner API.

* Fix bug 277074: Task description tooltip does not show full description

* Fix bug 274805: Effort Estimate defaults to 8.0Y instead of 8.0h on first instance.

* Add odt export to reports

* Fix bug 269652: Crash on save/exit.

* Fix bug 268095: Crash in some models when emitting dataChanged.

* Fix bug in load vs available units calculation

* Printing: Improve gantt chart printing

* Printing: Add printing of performance charts

* Reports: Add access to schedule name (=project.Plan())

* Add error indication when required estimated effort cannot be delivered.

* Gantt chart: Fix wrong positioning of time constraint indication

* Lock down baselined project.

* Schedules editor: Add 'detach' schedule for cases where you reschedule frequently

* Scheduling: Performance optimization

-----------------------------------------------------------------------------------
Calligra KPlato rev 0.10.1 (calligra 2.3.1)


Performance views:
* Show/hide info in accordance with user preferences.